Resolved Issue #3 with scrollbar

--- a/css/ch_stylesheet.css
+++ b/css/ch_stylesheet.css
@@ -17,6 +17,7 @@
 	margin-bottom: 10px;
 	border-radius: 5px;	
 	float: left;
+	overflow: auto;
 
 }
 
